--- a/index.html
+++ b/index.html
@@ -180,10 +180,26 @@
   <section class="quote">
     <h2>Get a quote today!</h2>
     <p>Sign up to contact one of our support team.</p>
-    <form>
-      <input type="email" placeholder="Enter your email" required>
-      <button type="submit">SUBMIT</button>
-    </form>
+    <!-- modify this form HTML and place wherever you want your form -->
+<form
+action="https://formspree.io/f/xgvyvpen"
+method="POST"
+>
+<label>
+  Your email:
+  <input type="email" name="email">
+</label>
+
+<label>
+  Your message:
+  <textarea name="message"></textarea>
+</label>
+
+<!-- your other form fields go here -->
+<button type="submit">Send</button>
+</form>
+      
+ 
   </section>
 
   <footer>
