--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
       --card-padding: 25px;
       --border-radius: 8px;
     }
-
+    html {
+      scroll-behavior: smooth;
+    }
     body {
       margin: 0;
       font-family: var(--font-primary);
