--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
 </head>
 <body>
   <header>
-    <img src="assets/img/Selawi.png" alt="Selawi Logo" class="logo">
+    <img src="assets/img/Selawi Logo.png" alt="Selawi Logo" class="logo">
     <h1 class="site-title">Selawi</h1>
     <p class="tagline">Securing Your Digital & Physical World</p>
     <nav>
